# SSU_laboratory_work

./: .gitignore  CMakeLists.txt
.github/workflows/: main.yml
lab1_intro/: main.cpp
term_2_exercise_chess_knight/: term_2_exercise_chess_knight.cpp
term_2_exercise_graphs/: BFS_and_DFS_in_graph.cpp
term_2_exercise_sort/: print_stack_trace.cpp
term_2_exercise_vector/: game.cpp
term_2_lab1/: CMakeLists.txt  first_exercise.cpp  second_exercise.cpp  third_exercise.cpp
term_2_lab2/: first_exercise.cpp  input.txt  second_exercise.cpp  third_exercise.cpp
term_2_lab3/: first_exercise.cpp  first_file_input.txt  first_file_output.txt  second_exercise.cpp  third_exercise.cpp
term_2_lab4/: first_exercise.cpp  input.txt  output.txt
term_2_lab4_sorting_array/: second_exercise.cpp  third_exercise.cpp
term_2_lab5/: CMakeLists.txt  first_exercise.cpp  forth_exercise.cpp  third_exercise.cpp
term_2_lab5_stack_and_queue/: second_exercise.cpp
term_2_lab6/: first_exercise.cpp  second_exercise.cpp  third_exercise.cpp
term_2_lab7/: CMakeLists.txt  first_exercise.cpp  third_exercise.cpp
term_2_lab7_trees/: second_exercise.cpp  third_exercise.cpp  third_exercise_ver_2.cpp
term_2_lab8_graphs/: fifth_exercise.cpp  first_exercise.cpp  forth_exercise.cpp  second_exercise.cpp  third_exercise.cpp
term_2_lab9_hash/: close_hash.cpp  first_file_input.txt  open_hash.cpp
term_2_optional/: avl_tree.cpp  euler_path.cpp  find_shortest_path_graph.cpp  postfix.cpp  postfix_suffix_tree.cpp  red_black_tree.cpp  timsort.cpp  topological_sort.cpp
