cmake_minimum_required(VERSION 4.0)
project(laboratory)

set(CMAKE_CXX_STANDARD 26)

add_subdirectory(term_2_lab1)
add_subdirectory(term_2_lab2)
add_subdirectory(term_2_lab3)
add_subdirectory(term_2_lab4)
add_subdirectory(term_2_lab5)
add_subdirectory(term_2_lab6_linkedList)
add_subdirectory(term_2_lab7_trees)
add_subdirectory(term_2_lab8_graphs)

add_subdirectory(term_2_exercise_vector)
add_subdirectory(term_2_exercise_sort)
add_subdirectory(term_2_exercise_chess_knight)
add_subdirectory(term_2_exercise_graphs)

add_subdirectory(term_2_optional)